v13: sorting out some spacing issues

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -420,7 +420,7 @@ padding-left: 20px;
 }
 
 .release-dates-key {
-  width: 220px !important;
+  width: 40% !important;
 }
 
 .release-dates-date {
